<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!--
    Main title -->
    <TextView
        android:id="@+id/trip_search"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="84dp"
        android:text="@string/trip_search"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--
    Horizontal line separator -->
    <View
        android:id="@+id/hr"
        android:layout_width="310dp"
        android:layout_height="2dp"
        android:layout_marginTop="28dp"
        android:background="#c0c0c0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trip_search" />
    <!--
    Keyword text -->
    <TextView
        android:id="@+id/keyword"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/key_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hr" />
    <!--
    Keyword input field -->
    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/keyword_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keyword" />
    <!--
    Toggle button -->
    <!--
    Table view to house some user input views -->
    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!--
            The 1st radio group, 1st column -->
            <RadioGroup
                android:id="@+id/radio_group1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_below="@+id/text"
                android:layout_marginStart="30dp"
                android:checkedButton="@+id/any">

                <RadioButton
                    android:id="@+id/any"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/any" />

                <RadioButton
                    android:id="@+id/under_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/under_3" />

                <RadioButton
                    android:id="@+id/three_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/three_8" />

                <RadioButton
                    android:id="@+id/eight_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eight_15" />

                <RadioButton
                    android:id="@+id/fifteen_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fifteen_plus" />
            </RadioGroup>
            <!--
            The 2nd radio group, 2nd column -->
            <RadioGroup
                android:id="@+id/radio_group2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginStart="80dp"
                android:checkedButton="@+id/any2">

                <RadioButton
                    android:id="@+id/any2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/any2" />

                <RadioButton
                    android:id="@+id/under_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/under_5" />

                <RadioButton
                    android:id="@+id/five_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/five_10" />

                <RadioButton
                    android:id="@+id/ten_20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ten_20" />

                <RadioButton
                    android:id="@+id/twenty_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/twenty_plus" />
            </RadioGroup>
        </TableRow>
    </TableLayout>
    <!--
    Horizontal line separator -->
    <View
        android:id="@+id/hr2"
        android:layout_width="310dp"
        android:layout_height="2dp"
        android:layout_marginTop="28dp"
        android:background="#c0c0c0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_layout" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="Search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hr2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:text="Include cancelled trips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toEndOf="@+id/switch1"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="Distance"
        app:layout_constraintEnd_toStartOf="@+id/time"
        app:layout_constraintHorizontal_bias="0.005"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="112dp"
        android:text="Time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />
</androidx.constraintlayout.widget.ConstraintLayout>